# vr360a-coding-assessment

./: .env  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/2024-09-28-151522_create_device_and_device_info/: down.sql  up.sql
backend/migrations/2024-09-28-214710_create_device_and_device_info/: up.sql
backend/src/: controller.rs  main.rs  models.rs  schema.rs
data_collector/: Cargo.toml  Dockerfile
data_collector/src/: main.rs
data_collector/src/client/: mod.rs
data_collector/src/common/: mod.rs
data_collector/src/host/: mod.rs
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx  Device.tsx  api.ts  main.tsx
