[package]
name = "data_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
sysinfo = "0.31.4"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
url = "2.5.2"
